# parsli

./: .dockerignore  .env.example  .gitignore  README.md  dashboard.py  docker-compose.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/src/parsli/: __init__.py  cli.py  config.py
backend/src/parsli/api/: main.py  routes_dashboard.py  routes_dev.py  routes_settings.py  routes_sync.py
backend/src/parsli/db/: models.py  repositories.py  session.py
backend/src/parsli/domain/: carriers.py  chronology.py  email_types.py  events.py  identifiers.py  merge.py  projections.py  shipments.py  statuses.py
backend/src/parsli/gmail/: auth.py  candidate_fetcher.py  client.py  domain_normalizer.py  ingestor.py  models.py  query_builder.py  sender_trust.py
backend/src/parsli/languages/: __init__.py  en.yaml  he.yaml
backend/src/parsli/model/: base.py  factory.py  llamacpp_client.py  lmstudio_client.py  prompts.py
backend/src/parsli/privacy/: debug_store.py  hashing.py  sanitizer.py
backend/src/parsli/processing/: cleaner.py  extraction_orchestrator.py  model_classifier.py  pipeline.py  reconciler.py  (+1 more)
backend/tests/: test_candidate_fetcher.py  test_candidate_observability.py  test_chronology.py  test_dashboard_projection.py  test_domain_normalizer.py  test_extraction_guards.py  test_identifier_selection.py  test_language_packs.py  test_merge.py  test_model_classifier.py  test_query_builder.py  test_reconciler.py  test_sender_trust.py  test_shipment_resolution.py  test_statuses.py  test_sync_idempotency.py
(+92 files in other folders)
